--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.launch {
+.launch, .maintask {
     border: 1px solid #c4c4c4; 
     height: 20px; 
     width: 120px;
@@ -11,6 +11,10 @@
     box-shadow: 0px 0px 8px #d9d9d9; 
     -moz-box-shadow: 0px 0px 8px #d9d9d9; 
     -webkit-box-shadow: 0px 0px 8px #d9d9d9; 
+}
+
+.maintask {
+    text-align: center;
 }
 
 .mainstyle {
@@ -39,4 +43,44 @@
     -webkit-box-shadow: 0px 0px 8px #d9d9d9;  
 }
 
+table {
+    margin: auto;
+    font-family: Arial;
+    font-size: 22px;
+    border-spacing: 5px;
+}
+
+#subtasklayout {
+    
+    border-spacing: 5px;
+}
+
+th {
+    font-size: 30px;
+}
+
+#subtasksection {
+    border: 4px solid gray;
+    width: 380px;
+    height: 300px;
+}
+
+#alertframe {
+    border: 1px solid gray;
+    width: 380px;
+    height: 300px;
+}
+
+#selector {
+    border: 1px solid gray;
+    width: 390px;
+    height: 300px;
+}
+
+select {
+    width: 100px;
+    height: 30px;
+    overflow: hidden;
+    border: 1px solid #ccc;
+}
 
