--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,8 @@
     box-shadow: 0px 0px 8px #d9d9d9; 
     -moz-box-shadow: 0px 0px 8px #d9d9d9; 
     -webkit-box-shadow: 0px 0px 8px #d9d9d9;  
+    outline: none;
+    min-width: 90px;
 }
 
 table {
@@ -50,8 +52,15 @@ table {
     border-spacing: 5px;
 }
 
+#alertentries {
+    font-size:25px;
+    border-spacing:50px;
+}
+#underlineme {
+    text-decoration:underline;
+}
+
 #subtasklayout {
-    
     border-spacing: 5px;
 }
 
@@ -67,7 +76,13 @@ th {
 
 #alertframe {
     border: 1px solid gray;
-    width: 380px;
+    width: 770px;
+    height: 300px;
+}
+
+#processframe {
+    border: 1px solid gray;
+    width: 390px;
     height: 300px;
 }
 
@@ -82,5 +97,9 @@ select {
     height: 30px;
     overflow: hidden;
     border: 1px solid #ccc;
+}
+
+span,tab {
+     padding: 0 65px;
 }
 
