--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ th {
     font-size: 30px;
 }
 
-#subtasksection {
+.subtasksection {
     border: 4px solid gray;
     width: 380px;
     height: 300px;
@@ -76,8 +76,8 @@ th {
 
 #alertframe {
     border: 1px solid gray;
-    width: 770px;
-    height: 300px;
+    width: 785px;
+    height: 310px;
 }
 
 #processframe {
@@ -89,7 +89,7 @@ th {
 #selector {
     border: 1px solid gray;
     width: 390px;
-    height: 300px;
+    height: 320px;
 }
 
 select {
