--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,21 @@
     -webkit-box-shadow: 0px 0px 8px #d9d9d9; 
 }
 
+.numbersOnly {
+    border: 1px solid #c4c4c4; 
+    height: 60px; 
+    width: 60px;
+    font-size: 42px; 
+    font-family: Arial;
+    padding: 4px 4px 4px 4px; 
+    border-radius: 4px; 
+    -moz-border-radius: 4px; 
+    -webkit-border-radius: 4px; 
+    box-shadow: 0px 0px 8px #d9d9d9; 
+    -moz-box-shadow: 0px 0px 8px #d9d9d9; 
+    -webkit-box-shadow: 0px 0px 8px #d9d9d9; 
+}
+
 .maintask {
     text-align: center;
 }
@@ -80,7 +95,7 @@ th {
     height: 310px;
 }
 
-#processframe {
+.processframe {
     border: 1px solid gray;
     width: 390px;
     height: 300px;
@@ -100,6 +115,30 @@ select {
 }
 
 span,tab {
-     padding: 0 65px;
+    padding: 0 65px;
 }
+
+#criticalerror {
+    font-family: Arial;
+    text-align: center;
+    font-size: 36px;
+}
+
+
+//Doughnut Packing Stuff Below
+
+.prompt {
+    font-family: Arial;
+    text-align: center;
+    font-size: 36px;
+}
+
+em {
+    text-decoration: underline;
+}
+
+span {
+    padding: 0px;
+}
+
 
